Add actions to reroll or turn